--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/** @format */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+    135deg,
+    #f8e1e7,
+    #fdf6f0
+  ); /* pastel pink to beige */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  background: linear-gradient(
+    to right,
+    #f8e1e7,
+    #f6d1c1
+  ); /* rose gold shades */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid #f5d3c8;
+  font-family: 'Poppins', sans-serif;
+}
+
+.smartindiahackathon img {
+  height: max-content;
+  width: 50%;
+}
+
+.smartHackthaon {
+  background-color: #f0f4f8;
+}
+
+.margin-left {
+  margin-left: 5px !important;
 }
