--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .App {
   text-align: center;
 }
@@ -34,5 +36,14 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+    padding: 10px;
+  }
+  .Raveena {
+    max-width: 300px !important;
   }
 }
